--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 __pycache__
 experiment_results/*
 !experiment_results/.gitkeep
+
+data/ROCStories/*
+!data/ROCStories/readme.txt
+
+data/books/*
+!data/books/readme.txt
